# GStreamer-tutorial

./: .gitignore  README.md
Application Development Manual/1. About GStreamer/: What is GStreamer.md
Application Development Manual/AboutGStreamer/: 1. What is GStreamer.md  2. Design principles.md  3. Foundations.md
Application Development Manual/BuildingApplication/: 1.  InitializingGStreamer.md
sample/Building an Application/: CMakeLists.txt
sample/Building an Application/initializing/: CMakeLists.txt  main.cpp
sample/Tutorials/basic-tutorial/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-1/: CMakeLists.txt  basic-tutorial-1.c
sample/Tutorials/basic-tutorial/basic-tutorial-12/: CMakeLists.txt  basic-tutorial-12.c
sample/Tutorials/basic-tutorial/basic-tutorial-13/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-15/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-2/: CMakeLists.txt  basic-tutorial-2.c
sample/Tutorials/basic-tutorial/basic-tutorial-3/: CMakeLists.txt  basic-tutorial-3.c
sample/Tutorials/basic-tutorial/basic-tutorial-4/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-5/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-6/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-7/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-8/: CMakeLists.txt
sample/Tutorials/basic-tutorial/basic-tutorial-9/: CMakeLists.txt
